--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,18 @@
   font-weight: 300;
   font-style: normal;
 }
+.footer{
+  width: '80%';
+  margin: 'auto';
+  background-color: #724b75;
+  /* // color: 'rgb(100,0,123)'; */
+  color: 'white';
+  text-align: 'center';
+
+}
+.marginCenter{
+margin: auto;
+}
 .logos{
   width: 50px;
   height: 50px;
@@ -47,7 +59,12 @@ button{
 }
 .container{
   max-width: 300px;
-  margin: 100px auto 40px;
+  margin: 100px auto 60px;
+}
+.container-project{
+  max-width: 100%;
+  margin: 15px auto;
+  
 }
 .container h3{
   padding-bottom: 10px;
@@ -70,7 +87,7 @@ header .title{
   margin-left: 20px;
   font-size: 0.6em;
 }
-header .titleLeft{
+ .titleLeft{
   float: right;
   margin-right: 20px;
   margin-bottom: 20px;
@@ -104,7 +121,7 @@ li span.active::before{
 /* pages */
 .home h2{
   font-size: 2em;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 .home.container, 
 .order.container{
@@ -182,3 +199,16 @@ li span.active::before{
   border-radius: 50%;
   background: #fff;
 }
+
+/* changes in material css */
+.MuiAppBar-colorPrimary {
+  background: rgb(100,0,123);
+  background: radial-gradient(circle, rgba(100,0,123,1) 0%, rgba(62,20,86,1) 100%)!important;
+}
+.MuiTypography-h6{
+  margin: 20px!important;
+}
+@media screen and (max-width: 600px) {
+  .MuiTypography-h6{
+    margin: 2px!important;
+  }}
